# genesquery

./: .gitignore  geneticsds_ZNF3.csv  pyproject.toml
genesquery/: __init__.py
genesquery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: test_main.py
