[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesquery"
version = "0.0.1"
authors = [
  { name="kwakuopare", email="kwakuoparefavor@gmail.com" },
]
description = "extraction of genes"
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]    

[project.urls]
"Homepage" = "https://github.com/kwakugithub/Genespackages-in-helmholtz.git"
"Bug Tracker" = "https://github.com/kwakugithub/Genespackages-in-helmholtz.git"


[project.scripts] 
genesquery = "genesquery:main"
